--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -11,7 +11,8 @@
         "Ajouter une catégorie":"Add a category",
         "Catégorie : Théme":"Category : Theme",
         "utilisée pour tout les thèmes":"Used by all themes",
-        "Exporter...":"Export...",
+        "Importer":"Import",
+        "Exporter":"Export",
         "Détails":"Details",
         "Aperçu":"Preview",
         "Pas à Pas":"Beginner",
@@ -47,7 +48,7 @@
         "Ajouter une Font":"Add Font",
         "Lecture Seule":"Read Only",
         "Détails du Cadre principal":"Main Framework Detail",
-        "Cadre unique":"Single frame",
+        "Cadre Unique":"Single Frame",
         "Id du Cadre":"Framework ID",
         "Options d'affichage du Menu":"Menu options Display",
         "Menu":"Menu",
@@ -90,6 +91,8 @@
     },
     "plugins\/themes\/desktop\/js\/themes.js": {
         "Etes-vous sûr de vouloir supprimer le Thèmes , tous les plans liés seront aussi éffacés":"Are you sur to delete this Theme, all plans will be delete too",
+        "Aucune":"None",
+        "Cadre":"Frame",
         "Veuillez d'abord sélectionner un":"Select a",
         "Création des Pages":"Pages Add",
         "Sauvegarder immédiatement après création des pages, pour ne pas perdre les identifiants des pages":"Save immediatly after pages created to don't lose pages ID",
@@ -97,6 +100,8 @@
         "Général":"General",
         "H:":"W:",
         "L:":"H:",
+        "Titre":"Title",
+        "Ligne SVG":"SVG Line",
         "Position":"Position",
         "Dimensions":"Dimensions",
         "Voir/Cacher le Titre":"Show/Hide Title",
@@ -123,7 +128,6 @@
         "Ajouter une Font":"Add Font",
         "Lecture Seule":"Read Only",
         "Détails du Cadre principal":"Main Framework Detail",
-        "Cadre unique":"Single frame",
         "Id du Cadre":"Framework ID",
         "Options d'affichage du Menu":"Menu options Display",
         "Menu":"Menu",
@@ -134,6 +138,7 @@
         "Texte":"Text",
         "Textes":"Texts",
         "Barre d'état":"Tray",
+        "Cadre unique":"Single Frame",
         "Type Menu":"Menu Type",
         "Boutons":"Buttons",
         "Onglets":"Tabs",
@@ -210,6 +215,73 @@
         "Défaut":"Default"
     },
     "plugins\/themes\/core\/ajax\/themes.ajax.php": {
-        
+        "Répertoire d'upload de fonts non trouvé":"Fonts Directory not found",
+        "Répertoire d'upload d'images non trouvé":"Images Directory not found",
+        "Impossible de créer la catégorie":"Impossible to create category",
+        "Nom de catégorie vide":"Category name empty",
+        "Cette catégorie contient encore des images":"This Category still contain image(s)",
+        "Impossible d'éffacer la catégorie":"Impossible to remove category",
+        "Impossible d'éffacer l'image":"Impossible to remove image",
+        "Impossible d'éffacer la Font":"Impossible to remove Font",
+        "Aucun fichier trouvé. Vérifié parametre PHP (post size limit)":"No file found, check PHP parameters (post size limit)",
+        "Répertoire d'upload non trouvé":"Upload Directory not found",
+        "Seul les images sont accepté (autorisé .jpg .png)":"Only images accepted (authorized .jpg .png)",
+        "Le fichier est trop gros":"file too large",
+        "Impossible de déplacer le fichier temporaire":"impossible to move temporary file",
+        "Impossible d'uploader le fichier (limite du serveur web ?)":"Impossible to upload file (server limit ?)",
+        "Seul les fonts True Type et Web Open Font Format sont accepté (autorisé .ttf,.woff)":"Only True Type Fonts and Web Open Font Format accepted (authorized .ttf,.woff)",
+        "Seul les fichiers Thèmes sont accepté (autorisé .thm)":"Only Themes file accepted (authorized .thm)"
+    },
+    "plugins\/themes\/desktop\/js\/cadres.js": {
+        "Pages Secondaires":"Secondaries Pages",
+        "Plan":"Plan",
+        "coorectement dupliqué vers":"correctly duplicated to",
+        "Ligne SVG":"SVG line",
+        "Supprimer la ligne SVG":"Remove SVG line",
+        "Haut":"Top",
+        "Bas":"Bottom",
+        "Gauche":"Left",
+        "Droite":"Right",
+        "Valider":"Ok",
+        "Début":"Begin",
+        "1er Point":"First Point",
+        "2eme Point":"Seconf Point",
+        "Fin":"End",
+        "Ligne":"Line",
+        "Verrouillez le Cadre":"Lock Framework",
+        "Déverrouillez le Cadre":"Unlock Framework",
+        "Supprimer le Cadre":"Remove Framework",
+        "Voir/Cacher le Titre":"Show/Hide title",
+        "Couleur du Titre":"Title Color",
+        "Couleur":"Color",
+        "Image":"Image",
+        "Niveau":"Level",
+        "Ajouter une ligne SVG":"Add SVG line",
+        "Editer la ligne SVG":"Edit SVG line"
+    },
+    "plugins\/themes\/desktop\/js\/fonctions.js": {
+        "Plan":"Plan",
+        "Aucune":"None",
+        "Création d'un Plan":"Plan Creation",
+        "créé avec succès":"created successfully",
+        "Mise à Jour d'un Plan":"Plan Update",
+        "mis à jour avec succès":"updated successfully",
+        "Check-Up des Plans":"Plans Check-up",
+        "Plan de la fenêtre principale manquant":"Main Window Plan missing",
+        "du sous menu":"of dropdown entry",
+        "manquant":"missing",
+        "Check-Up complet, Tous les plans ont été trouvé":"Check-Up complete, all plans found",
+        "Etes-vous sûr de vouloir réinitialiser ce plan , toutes les données vont être éffacées":"Are you sure to want init plan, all data will be remove",
+        "Création Boostrap":"Boostrap Creation",
+        "insertion du code Bootstrap dans la page principale":"Insertion Bootstrap code in Main Page",
+        "insertion du code Bootstrap dans la page secondaire":"Insertion Bootstrap code in Secondary Page",
+        "Suppression d'un Plan":"Plan Delete",
+        "supprimé avec succès":"deleted successfully",
+        "Pages Secondaires":"Secondaries Pages",
+        "Cadres Multiples éffacés, remplacé par un cadre unique":"Multi-framework deleted, replace by single frame",
+        "Cadre unique erroné, correction effectué":"Single-framework error, patch made",
+        "En Cours de Développement, selectionnez la page principale":"In Construction, select Main Page",
+        "Import d'un Thème":"Theme Import",
+        "Thème importé avec succès":"Theme imported successfully"
     }
 }
