--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -16,7 +16,7 @@ Plugin servant à créer des thèmes pour le mode Design à partir de la librair
 
 [role="col-md-12 text-justify"]
 --
-*_Jeedom_*(TM) nous offre un mode Design qui permet de créer un mode de vue très libre, mais n'est pas abordable pour n'importe qui. Le but de ce plugin est de créer la structure complète de votre mode Design, pour que les seules actions à faire en mode Design soient le placement des widgets. La structure comprend une barre de menu permettant de sélectionner la "pièce" que l'on veut visualiser, un cadre principal ou sera affiché la "pièce" demandée, une barre d'état optionnelle +.
+*_Jeedom_*(TM) nous offre un mode Design qui permet de créer un mode de vue très libre, mais n'est pas abordable pour n'importe qui. Le but de ce plugin est de créer la structure complète de votre mode Design, pour que les seules actions à faire en mode Design soient le placement des widgets. La structure comprend une barre de menu permettant de sélectionner la "pièce" que l'on veut visualiser, un cadre principal ou sera affiché la "pièce" demandée, une barre d'état optionnelle. +
 Au fur et à mesure du développement sont venus se greffer plusieurs autres modules qui viennent en complément du plugin, mais qui pourront servir de manière complètement indépendante pour d'autres plugins ou fonctionnalités de *_Jeedom_*(TM).
 
 . Le gestionnaire d'images
@@ -42,7 +42,7 @@ le plugin ne va pas créer le mode design tout seul, il faut avant de commencer 
 Un tutoriel vidéo est aussi disponible, merci à *SBO* +
 https://www.youtube.com/watch?v=alpuGohpuXE&feature=youtu.be
 
-include::partie_1.asciidoc[Création d'un thème facile]
+include::partie_1.asciidoc[]
 
 '''
 == FAQ
